# video-subtitles-generator

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: docker-run.sh
src/: constants.py  helpers.py  main.py
